# stasis

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  mytesting-script.gr  package.json  showtest.md  simple_search.gr
.github/: pull_request_template.md
dashboard_assets/static/: dashboard.css  htmx.min.js  workflow-builder.css
dashboard_assets/styles/: dashboard.scss  input.css
docs/: README.md  v1-runtime-draft.md
docs-book/: book.toml
docs-book/book/: 404.html  adr.html  agent-coordination.html  architecture-overview.html  chat-middleware.html  command-center-dashboard.html  control-plane-endpoint-routing.html  cookbook.html  dashboard-operations-guide.html  environment-configuration.html  extension-points.html  getting-started.html  grapheme-workflow-handlers.html  identity-memory-layer.html  index.html  introduction.html  lineage-observability.html  llm-providers.html  memory-operations.html  opentelemetry.html  orchestration-patterns.html  print.html  recurring-jobs.html  retention-replay.html  runtime-builder.html  runtime-job-design.html  runtime-v1-draft.html  searcher-c2a407aa.js  searchindex-01f42003.js  searchindex-045a4fad.js  searchindex-0adc64f9.js  searchindex-0c0f251d.js  searchindex-1abcc4a6.js  searchindex-1d30842c.js  searchindex-3f437709.js  searchindex-512a4c92.js  searchindex-6d96df05.js  searchindex-a9f91ad1.js  searchindex-aacee42b.js  searchindex-b67b3bb4.js  (+15 more)
docs-book/book/cookbook/: identity-memory-change-control.html  memory-maintenance-rollups.html  production-agentic-workflows.html  (+2 more)
docs-book/src/: SUMMARY.md  adr.md  agent-coordination.md  architecture-overview.md  chat-middleware.md  command-center-dashboard.md  control-plane-endpoint-routing.md  cookbook.md  dashboard-operations-guide.md  environment-configuration.md  extension-points.md  getting-started.md  grapheme-workflow-handlers.md  identity-memory-layer.md  introduction.md  lineage-observability.md  llm-providers.md  medousa-roadmap.md  memory-operations.md  opentelemetry.md  orchestration-patterns.md  recurring-jobs.md  retention-replay.md  runtime-builder.md  runtime-demo-plan.md  runtime-job-design.md  runtime-phase-plan.md  runtime-v1-draft.md  stasis-framework-implementation-plan.md  stasis-framework-rfc.md  stasis-job-cycle.html  stasis-tool-macro.md  surrealdb-schema.md
docs/adr/: ADR-0005-agentic-workflow-skill-graph-contract.md  ADR-0006-opentelemetry-first-class-observability.md  README.md
docs/architecture/: overview.md  surrealdb-schema.md
docs/design/: Dasboarh Proto-type ideas.md  command_center_redesign.html  concurrent-capabilities-0.5.0-roadmap.md  dashboard-tailwind-parity-plan.md  dashboard-visual-system-sprint-plan.md  distributed-command-center-phase-plan.md  documentation-transformation-program.md  erDiagram.mmd  flowchart LR.mmd  flowchart TD.mmd  genai-0.6.0-runtime-upgrade-roadmap.md  grapheme-canvas-loop-container-spec.md  grapheme-reflection-lsp-delivery-plan.md  hospice-interoperability-safety-test-gameplan.md  identity-model-0.4.0-roadmap.md  job-runtime-design.md  locus-integration-rfc-plan.md  medousa-context-orchestration-phase-plan.md  medousa-context-orchestration-spec.md  medousa-grapheme-cli-tooling-plan.md  medousa-grapheme-editor-sprint-plan.md  medousa-grapheme-sttp-compaction-implementation-checklist.md  medousa-grapheme-sttp-compaction-refinement-plan.md  medousa-orchestration-loop-budget-plan.md  medousa-orchestration-loop-kickoff-checklist.md  medousa-orchestration-phase-a-baseline-notes.md  medousa-product-revamp-sprint-01.md  medousa-roadmap.md  medousa-tui-settings-safety-plan.md  medousa-tui-theme-system-plan.md  medousa-tui-uxdx-plan.md  opentelemetry-integration-rfc-plan.md  runtime-demo-plan.md  runtime-phase-plan.md  stasis-api-sdk-layer-design.md  stasis-framework-implementation-plan.md  stasis-framework-rfc.md  unified-sdk-surface-proposal.md  workflow-builder-execution-checklist.md  workflow-builder-product-phase-plan.md  (+2 more)
examples/: agentic_workflows_production.rs  runtime_backends_profiles.rs  runtime_in_memory.rs  simple_agent.rs  simple_agent_production.rs  team_role_workflows.rs
medousa/: Cargo.toml  README.md
medousa/architecture/: MedousaFlow.mmd  README.md  component-cli.md  component-daemon.md  component-tui.md  enterprise-architecture-and-flow-guide.md  interaction-and-state-model.md  medousa-prompt.mmd  medousa-state.mmd  system-overview.md  tui-performance-target-plan.md
medousa/src/: artifact_chunking.rs  artifact_extraction.rs  artifact_store.rs  context_pack.rs  daemon_api.rs  events.rs  grapheme_sttp_compaction.rs  lib.rs  payload_receipt.rs  session.rs  settings_guard.rs  stage_routing.rs  tools.rs  verification_store.rs  verifier.rs
medousa/src/tui/: allowlist_preview.rs  editor_buffer.rs  mod.rs  settings.rs
scripts/: check-doc-metadata.sh  smoke-agentic-workflows.sh
src/: lib.rs
src/application/: dto.rs  mod.rs
src/dashboard/: assets.rs  bootstrap.rs  dto.rs  handlers.rs  htmx.rs  integration.rs  mappers.rs  mod.rs  service.rs  trace_context.rs
src/domain/: errors.rs  events.rs  mod.rs
src/domain/runtime/: job.rs  (+9 more)
src/infrastructure/: mod.rs
src/sdk/: control_plane_sdk.rs  mod.rs  runtime_sdk.rs  stasis_sdk.rs
stasis-macros/: Cargo.toml  README.md
stasis-macros/src/: lib.rs
stasis-macros/tests/: stasis_tool_ui.rs
stasis-macros/tests/ui/: fail_multiple_args.rs  fail_multiple_args.stderr  fail_non_async.rs  fail_non_async.stderr  fail_output_schema_requires_jsonschema.rs  fail_output_schema_requires_jsonschema.stderr  fail_return_type.rs  fail_return_type.stderr  pass_basic.rs  pass_output_schema.rs  support.rs
templates/dashboard/: action_status.html  index.html  inspector.html  workflow_draft_run_result.html
tests/: architecture_conformance.rs  chat_middleware_pipeline.rs  control_plane_delivery_diagnostics.rs  dashboard_bootstrap.rs  dashboard_trace_propagation.rs  locus_memory_adapters.rs  otel_runtime_parity.rs  production_examples_smoke.rs  runtime_backend_parity.rs  stasis_tool_macro.rs  stasis_tool_macro_ui.rs
(+197 files in other folders)
