[package]
name = "stasis"
version = "0.1.0"
edition = "2024"
description = "Durable AI orchestration framework with runtime jobs, lineage, and memory integration"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/EntasisLabs/stasis"
homepage = "https://github.com/EntasisLabs/stasis"
documentation = "https://docs.rs/stasis"
keywords = ["ai", "agent", "orchestration", "runtime", "workflow"]
categories = ["asynchronous", "development-tools", "web-programming"]
include = [
	"/Cargo.toml",
	"/README.md",
	"/LICENSE-MIT",
	"/LICENSE-APACHE",
	"/build.rs",
	"/src/**",
	"/templates/**",
	"/dashboard_assets/static/**",
	"/dashboard_assets/styles/**",
	"/docs/README.md",
	"/docs/architecture/**",
	"/docs/adr/**",
	"/docs/v1-runtime-draft.md",
	"/docs/design/stasis-framework-rfc.md",
	"/docs/design/stasis-api-sdk-layer-design.md",
	"/scripts/check-doc-metadata.sh",
	"/examples/**",
]

[workspace]
members = ["."]
resolver = "2"

[features]
default = []
dashboard-embedded = []
dashboard-lsp = []
transport-rabbitmq = ["dep:lapin"]
transport-kafka = ["dep:rskafka"]
transport-kafka-wasm = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
surrealdb = { version = "3", default-features = false, features = ["kv-surrealkv", "rustls", "kv-mem", "protocol-ws"] }
surrealdb-types = "3"
rust-embed = "8"
regex = "1"
sha2 = "0.10"
hex = "0.4"
locus-core-rs = "=0.2.1"
locus-sdk = "=0.1.1"
genai = "0.5.3"
async-trait = "0.1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.12"
grapheme-sdk = "0.3.0"
grapheme-compiler = "0.3.0"
grapheme-lsp = "0.4.0"
futures-util = "0.3"
lapin = { version = "2", optional = true }
rskafka = { version = "0.5", optional = true }

[build-dependencies]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }