[package]
name = "stasis-rs-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for stasis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EntasisLabs/stasis"
homepage = "https://github.com/EntasisLabs/stasis"
documentation = "https://docs.rs/stasis-rs-macros"
readme = "README.md"
keywords = ["ai", "agent", "orchestration", "proc-macro", "workflow"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
name = "stasis_macros"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
async-trait = "0.1"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trybuild = "1"
